<resources>
    <string name="app_name">CakeTouch</string>
    <string name="no">桌号：</string>
    <string name="setting">设置</string>
    <string name="add_new_dish">新增菜品</string>
    <string name="show_dish">查看菜品</string>


    <string name="check_ordered">查看已点</string>
    <string name="serve_food">上菜</string>
    <string name="new_table">新的桌子</string>
    <string name="table_num">桌位</string>
    <string name="stuff_for_serve">待上的菜</string>
    <string name="check_drink">查看饮料</string>
    <string name="add_stuff">确认添加</string>
    <string name="num">号</string>

    <string name="dish_name">名称:</string>
    <string name="input">输入</string>
    <string name="dish_price">价格:</string>
    <string name="dish_low_price">小份价格:</string>
    <string name="dish_unit">单位:</string>
    <string name="dish_type">类型:</string>

    <string name="other">其<br/>它</string>
    <string name="yao">窑</string>
    <string name="soup">汤</string>
    <string name="saute">炒</string>
    <string name="pot">煲</string>
    <string name="fry">炸</string>
    <string name="drink">饮<br/>品</string>

    <string-array name="dishUnitArray">
        <item>份</item>
        <item>盘</item>
        <item>罐</item>
        <item>支</item>
        <item>个</item>
        <item>斤</item>
    </string-array>

    <string-array name="dishTypeArray">
        <item>其它</item>
        <item>窑</item>
        <item>汤</item>
        <item>炒</item>
        <item>煲</item>
        <item>炸</item>
        <item>饮品</item>
    </string-array>

    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="back">返回</string>


    <string name="update_dish">修改菜品</string>
    <string name="confirm_change">确认修改</string>
    <string name="delete_dish">删除菜品</string>
    <string name="detail">详细信息</string>

    <string name="order_food">点餐</string>
    <string name="normal">正常</string>
    <string name="small">小份</string>

    <string name="people_count">人数</string>
    <string name="ordered">已点</string>
    <string name="served">已上</string>

    <string name="belongTo">属于</string>
    <string name="table_count">桌数</string>
</resources>