<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/setting"
        android:autoSizeTextType="uniform"
        android:layout_marginLeft="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonAddDish"
            android:layout_width="220dp"
            android:layout_height="70dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/add_new_dish"
            android:textSize="30dp" />
        <Button
            android:id="@+id/buttonShowDish"
            android:layout_width="220dp"
            android:layout_height="70dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/show_dish"
            android:textSize="30dp" />

    </LinearLayout>

</LinearLayout>