<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linerLayoutUpdateDishPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:text="@string/update_dish" />

            <!--img-->
            <ImageView
                android:id="@+id/imageViewDishUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logo" />

            <!--name-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/textView24"
                    style="@style/dish_detail_list"
                    android:layout_height="wrap_content"
                    android:text="@string/dish_name" />

                <EditText
                    android:id="@+id/textView_dish_name_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="text" />

            </LinearLayout>

            <!--price-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/textView25"
                    style="@style/dish_detail_list"
                    android:layout_height="wrap_content"
                    android:text="@string/dish_price" />

                <EditText
                    android:id="@+id/textView_dish_price_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:inputType="number"
                    android:text="text" />

            </LinearLayout>

            <!--low price-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/textView26"
                    style="@style/dish_detail_list"
                    android:layout_height="wrap_content"
                    android:text="@string/dish_low_price" />

                <EditText
                    android:id="@+id/textView_dish_low_price_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:inputType="number"
                    android:text="text" />

            </LinearLayout>

            <!--unit-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/textView27"
                    style="@style/dish_detail_list"
                    android:layout_height="wrap_content"
                    android:text="@string/dish_unit" />

                <Spinner
                    android:id="@+id/spinnerDishUnitUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:entries="@array/dishUnitArray" />


            </LinearLayout>

            <!--type-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/textView28"
                    style="@style/dish_detail_list"
                    android:layout_height="wrap_content"
                    android:text="@string/dish_type" />

                <Spinner
                    android:id="@+id/spinnerDishTypeUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:entries="@array/dishTypeArray" />


            </LinearLayout>

            <!--Button-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonDishCancelDishUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:text="@string/cancel" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonConfirmDishUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/button_background"
                android:text="@string/confirm_change" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>