<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="100dp"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:orientation="vertical"
        android:background="@drawable/table_block_background">

        <TextView
            android:id="@+id/textViewTableNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/num"
            android:textAlignment="center"
            android:textSize="15sp" />

        <!--people_count-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView19"
                style="@style/table_block_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/people_count" />

            <TextView
                android:id="@+id/textViewTablePeopleCount"
                style="@style/table_block_text_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="20" />
        </LinearLayout>

        <!--ordered-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView31"
                style="@style/table_block_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ordered" />

            <TextView
                android:id="@+id/textViewTableStuffOrdered"
                style="@style/table_block_text_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="55" />
        </LinearLayout>

        <!--served-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView33"
                style="@style/table_block_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/served" />

            <TextView
                android:id="@+id/textViewTableStuffServed"
                style="@style/table_block_text_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="0" />
        </LinearLayout>

    </LinearLayout>






</LinearLayout>