<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!--其它-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="140dp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/other"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:textSize="20dp"/>
                </LinearLayout>
                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <LinearLayout
                        android:id="@+id/LinerLayoutTypeOther"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                    </LinearLayout>
                </HorizontalScrollView>
            </LinearLayout>

            <!--窑-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="140dp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/yao"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:textSize="20dp"/>
                </LinearLayout>
                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <LinearLayout
                        android:id="@+id/LinerLayoutTypeYao"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    </LinearLayout>
                </HorizontalScrollView>
            </LinearLayout>

            <!--汤-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="140dp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/soup"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:textSize="20dp"/>
                </LinearLayout>
                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <LinearLayout
                        android:id="@+id/LinerLayoutTypeSoup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    </LinearLayout>
                </HorizontalScrollView>
            </LinearLayout>

            <!--炒-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="140dp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/saute"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:textSize="20dp"/>
                </LinearLayout>
                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <LinearLayout
                        android:id="@+id/LinerLayoutTypeSaute"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    </LinearLayout>
                </HorizontalScrollView>
            </LinearLayout>

            <!--煲-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="140dp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/pot"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:textSize="20dp"/>
                </LinearLayout>
                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <LinearLayout
                        android:id="@+id/LinerLayoutTypePot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    </LinearLayout>
                </HorizontalScrollView>
            </LinearLayout>

            <!--炸-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="140dp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/fry"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:textSize="20dp"/>
                </LinearLayout>
                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <LinearLayout
                        android:id="@+id/LinerLayoutTypeFry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                    </LinearLayout>
                </HorizontalScrollView>
            </LinearLayout>

            <!--饮品-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="140dp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/drink"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:textSize="20dp"/>
                </LinearLayout>
                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <LinearLayout
                        android:id="@+id/LinerLayoutTypeDrink"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    </LinearLayout>
                </HorizontalScrollView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>